--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "eslint-config-prettier"
     ],
     "rules": {
       "quotes": [
@@ -97,7 +98,10 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
+    "prettier": "2.7.1",
     "prop-types": "^15.8.1",
     "webpack": "^5.74.0"
   }
