--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,17 +4,14 @@ on: [push]
 
 jobs:
   test-and-notification:
-    name: Run Test and Discord notification
+    name: Run Test and linter
     runs-on: ubuntu-latest
-    steps:   
+    steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Install dependencies
         run: npm install
-      
+
       - name: Run linter
         run: npm run lint
-
-      - name: Run tests
-        run: npm test
